--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
   },
   "homepage": "https://github.com/JPeer264/gulp-rcs#readme",
   "dependencies": {
+    "gulp-util": "^3.0.7",
     "rcs-core": "0.*.*",
     "through2": "^2.0.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "fs-extra": "^1.0.0",
+    "funsert": "^0.1.1",
     "gulp": "^3.9.1",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "stream-assert": "^2.0.3"
   }
 }
