--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/JPeer264/gulp-rcs#readme",
   "dependencies": {
+    "gulp-match": "^1.0.3",
     "gulp-util": "^3.0.7",
     "rcs-core": "0.*.*",
     "through2": "^2.0.3"
