--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "array-includes": "^3.0.2",
     "gulp-match": "^1.0.3",
     "gulp-util": "^3.0.7",
+    "json-extra": "^0.5.0",
     "rcs-core": "^0.2.1",
     "through2": "^2.0.3"
   },
