--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-match": "^1.0.3",
     "gulp-util": "^3.0.7",
     "json-extra": "^0.5.0",
+    "lodash.merge": "^4.6.0",
     "rcs-core": "^0.5.1",
     "through2": "^2.0.3"
   },
