--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
     "array-includes": "^3.0.2",
     "gulp-match": "^1.0.3",
     "gulp-util": "^3.0.7",
+    "html-minifier": "^3.5.21",
     "json-extra": "^0.5.0",
     "lodash.merge": "^4.6.0",
-    "rcs-core": "^0.9.0",
+    "rcs-core": "^2.4.1",
     "through2": "^2.0.3"
   },
   "devDependencies": {
