--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
   "dependencies": {
     "array-includes": "^3.0.2",
     "gulp-match": "^1.0.3",
-    "gulp-util": "^3.0.7",
     "html-minifier": "^3.5.21",
     "json-extra": "^0.5.0",
     "lodash.merge": "^4.6.0",
-    "through2": "^2.0.3"
+    "plugin-error": "^1.0.1",
+    "through2": "^2.0.3",
+    "vinyl": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
